# sabc

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  release.yaml
csrc/: bindings.cpp  cdf.cpp  conv.hpp  distance.cpp  distance.hpp  epsilon.cpp  proposals.cpp  proposals.hpp  resample.cpp  sabc.cpp  sabc.hpp
examples/: gaussian.py  sir.py
sabc/: __init__.py
sabc/_src/: cdf_test.py  config_test.py  conftest.py  core_run_test.py  core_smoke_test.py  distance_test.py  distributions.py  distributions_test.py  proposals.py  resample_test.py
src/cpp/: MLX_API_NOTES.md  bindings.cpp  cdf.hpp  conv.hpp  distance.cpp  distance.hpp  proposals.hpp  sabc.cpp  sabc.hpp
src/csrc/: bindings.cpp  cdf.cpp  cdf.hpp  common.hpp  conv.hpp  distance.cpp  epsilon.cpp  epsilon.hpp  proposals.cpp  resample.cpp  resample.hpp  sabc.hpp
src/sabc/: __init__.py
src/sabc/_src/: __init__.py  core_run_test.py  core_smoke_test.py  de_proposal_test.py  distance_test.py  distributions.py  distributions_test.py  epsilon_test.py  ravel.py  ravel_test.py  run.py  run_test.py  schedule.py
tests/cpp/: test_cdf.cpp  test_distance.cpp  test_epsilon.cpp  test_proposals.cpp  test_resample.cpp
