[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0", "cmake>=3.26", "mlx>=0.18"]
build-backend = "scikit_build_core.build"

[project]
name = "sabc"
version = "0.3.0"
description = "Simulated Annealing ABC in MLX."
authors = [{ name = "Simon Dirmeier", email = "simd23@pm.me" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "mlx>=0.18",
  "mlx[cpu]>=0.18; sys_platform == 'linux'",
]

[project.optional-dependencies]
all = []

[dependency-groups]
dev = [
  "gitlint",
  "numpy",
  "pytest>=7.2.0",
  "pytest-cov>=4.0.0",
  "ruff",
  "pre-commit",
  "scipy",
  "scikit-build-core>=0.10",
  "nanobind>=2.0",
  "cmake>=3.26",
  "ninja",
]
examples = [
  "matplotlib",
  "numpy",
]

[project.urls]
Homepage = "https://github.com/dirmeier/sabc"

[tool.uv]
# Build sabc against the env's build backend (not an isolated, ephemeral one),
# so the editable.rebuild hook can find cmake/ninja afterwards.
no-build-isolation-package = ["sabc"]

[tool.scikit-build]
cmake.version = ">=3.26"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/sabc"]
# Recompile changed C++ automatically on import (no manual rebuild step).
editable.rebuild = true

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--doctest-modules",
    "--cov=sabc",
    "--cov-report=xml",
    "--strict-markers",
    "--strict-config",
    "-ra"
]
testpaths = ["src/sabc"]

[tool.ruff]
indent-width = 2
line-length = 80
exclude = ["*_test.py", "build/**"]

[tool.ruff.lint]
extend-select = [
    "A",    # Builtins shadowing
    "ARG",  # Unused arguments (New)
    "ANN",  # Type annotations
    "B",    # Bugbear (common bugs)
    "C4",   # List/dict/set comprehensions
    "D",    # Docstrings
    "I",    # Isort (import sorting)
    "N",    # PEP8 Naming conventions
    "PL",   # Pylint rules
    "PTH",  # Pathlib usage (New)
    "RET",  # Return statements (New)
    "RUF",  # Ruff-specific checks (New)
    "S",    # Security checks
    "SIM",  # Code simplification
    "TCH",  # Type-checking blocks
    "UP",   # Pyupgrade (modern syntax)
]
ignore = ["S101", "ANN101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
show_error_codes = true
warn_unused_configs = true
no_implicit_optional = true
